# donjon

./: .gitignore  CLAUDE.md  LICENSE  README.md  donjon-dsl-reference.md
.github/workflows/: node.js.yml
docs/: PR-body.md  TODO.md  couverture-summary-2026-06-20.json  plan-tests-a-ajouter.md  prepositions-actions-proposition.md  resume-session-audit-tests.md  wiki-reference-audit-findings.json  wiki-reference-audit.md
dsl/: dsl-00-index.md  dsl-01-monde.md  dsl-02-elements.md  dsl-03-logique.md  dsl-04-texte.md  dsl-05-avance.md  dsl-05-pnj.md  dsl-06-memoire.md  dsl-07-monde-avance.md  dsl-08-exemple.md
examples/: sorts-grimoire.djn
exemples/: donjon_1.txt
ressources/: DonjonTypes.dia  Parler.dia  compilateur_v8.graphml  etapes_action.dia  etapes_regles_action.dia  etapes_regles_choisir_action.dia  ex_sauvegarde_v3.json  expr_conversion_v1_vers_v2.txt  priorite_operateurs.odt  priorite_operateurs.rtf
ressources/scenarios/: actions.djn  actions_perso.djn
ressources/theme/: entrainement_theme.htm  mon_theme.css
saves/: coince.djn  commandes.djn  donjon.djn  nain_tresor.djn
scripts/: build-all.ps1  build-extension-compagnon.ps1  build-extension-lang.ps1  bump-version.ps1  sync-actions.ps1  sync-compagnon.js
webapp/donjon/: .gitignore  README.md  angular.json  assign-test-ids.ps1  bump-version.ps1  ensure-standalone.js  gulpfile.js  (+10 more)
webapp/donjon-ide/: .angular-cli.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
webapp/donjon/src-tauri/: Cargo.toml  tauri.conf.json
webapp/donjon/src-tauri/icons/: icon.icns
(+981 files in other folders)
