[package]
name = "donjon-creer"
version = "0.407.0"
description = "Donjon Créer − Édition de fictions interactives."
authors = ["Jonathan Claes donjon.fi"]
license = "MIT"
homepage = "https://donjon.fi"
repository = "https://github.com/zigotteau/donjon"
default-run = "donjon-creer"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.6", features = [ "api-all" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
